--- a/example/statelesssvr/conf/server.yaml
+++ b/example/statelesssvr/conf/server.yaml
@@ -8,6 +8,11 @@ plugin:
       filesplitmb: 100000
       level: 0
 
+  transport:
+    tcp:
+      addr: 0.0.0.0:8888
+      idletimeout: 0
+
   mq:
     #kafka:
     #  client_config:
