--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 example/statelesssvr/statelesssvr_default.log
 example/statelesssvr/trpc.log
 example/statelesssvr/log/*
-example/statelesssvr/polaris/log/base/polaris.log
+example/statelesssvr/polaris/*
+example/mq
+example/statelesssvr
+
+
